--- a/Fast_Decoupled.ipynb
+++ b/Fast_Decoupled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "'def N_R(df, iter, tol):\\n    \"Function to perform Newton Raphson for solving non linear equations\"\\n    b_data_ = df.copy(deep=True)\\n    for i in range(iter):\\n        D_P, D_Q, J1, J4 = Jacobian(b_data, Y_bus())\\n        del_delta = np.linalg.solve(J1, D_P)\\n        print(max(np.abs(del_delta)))\\n        if max(np.abs(del_delta)) <= tol:\\n            print(\\'aa\\')\\n            pass   \\n        b_data_.loc[D_P.index, \\'Delta\\'] = b_data_.loc[D_P.index, \\'Delta\\'].values + del_delta\\n\\n    for i in range(iter):\\n        D_P, D_Q, J1, J4 = Jacobian(b_data, Y_bus())\\n        del_V = np.linalg.solve(J4, D_Q) \\n        \\n        if max(np.abs(del_V)) <= tol:\\n            return b_data_\\n        b_data_.loc[D_Q.index, \\'Vmag\\'] = b_data_.loc[D_Q.index, \\'Vmag\\'].values + del_V\\n    return \"Value Error\" '"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,139 +268,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V:Delta 1.0230522753039322\n",
-      " 0.047203094277807986\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V:Delta 1.0230522753039322\n",
-      " 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Delta 1.0230522753039322\n",
-      "V: 0.047203094277807986\n",
-      "Bus_No\n",
-      "1    -32.056712\n",
-      "2    -32.448056\n",
-      "3    -23.004421\n",
-      "4    -30.999661\n",
-      "5    -31.714408\n",
-      "        ...    \n",
-      "69   -29.032261\n",
-      "70   -29.746699\n",
-      "71   -23.715957\n",
-      "72   -32.862568\n",
-      "73   -25.754058\n",
-      "Name: Delta, Length: 73, dtype: float64\n",
-      "Bus_No\n",
-      "1     1.035000\n",
-      "2     1.076187\n",
-      "3     2.200108\n",
-      "4     2.467975\n",
-      "5     2.248638\n",
-      "        ...   \n",
-      "69    1.050000\n",
-      "70    1.188369\n",
-      "71    1.050000\n",
-      "72    1.736205\n",
-      "73    3.312952\n",
-      "Name: Vmag, Length: 73, dtype: float64\n"
+      "        Bus_type      Pg   Qg      Pl        Ql      Vmag     Delta  Qmin  \\\n",
+      "Bus_No                                                                      \n",
+      "1              2  0.5282  0.0  0.5635  0.114718  1.035000 -0.559495 -0.50   \n",
+      "2              1  0.0000  0.0  0.5041  0.103934  1.076187 -0.566325 -0.50   \n",
+      "3              1  0.0000  0.0  0.9342  0.192128  2.200108 -0.401503  0.00   \n",
+      "4              1  0.0000  0.0  0.3855  0.078077  2.467975 -0.541046  0.00   \n",
+      "5              1  0.0000  0.0  0.3707  0.073113  2.248638 -0.553521  0.00   \n",
+      "...          ...     ...  ...     ...       ...       ...       ...   ...   \n",
+      "69             2  4.0000  0.0  0.0000  0.000000  1.050000 -0.506709 -0.50   \n",
+      "70             1  0.0000  0.0  0.0000  0.000000  1.188369 -0.519178 -0.60   \n",
+      "71             2  0.5424  0.0  0.0000  0.000000  1.050000 -0.413922 -1.25   \n",
+      "72             1  0.0000  0.0  0.0000  0.000000  1.736205 -0.573560  0.00   \n",
+      "73             1  0.0000  0.0  0.0000  0.000000  3.312952 -0.449493  0.00   \n",
+      "\n",
+      "        Qmax    P_sh      Q_sh     P_calc     Q_calc        D_P        D_Q  \n",
+      "Bus_No                                                                      \n",
+      "1       0.80 -0.0353 -0.114718   0.145283   0.270413  -0.180583  -0.385131  \n",
+      "2       0.80 -0.5041 -0.103934   0.115442   0.150905  -0.619542  -0.254839  \n",
+      "3       0.00 -0.9342 -0.192128  -0.044612  -0.373058  -0.889588   0.180930  \n",
+      "4       0.00 -0.3855 -0.078077  -0.067081  -0.289160  -0.318419   0.211083  \n",
+      "5       0.00 -0.3707 -0.073113  -0.099883  -0.409413  -0.270817   0.336300  \n",
+      "...      ...     ...       ...        ...        ...        ...        ...  \n",
+      "69      2.00  4.0000  0.000000   0.186130   1.267593   3.813870  -1.267593  \n",
+      "70      0.96  0.0000  0.000000   0.065502   0.291163  -0.065502  -0.291163  \n",
+      "71      3.10  0.5424  0.000000  -9.423196  11.588655   9.965596 -11.588655  \n",
+      "72      0.00  0.0000  0.000000  -0.031411  -0.143106   0.031411   0.143106  \n",
+      "73      0.00  0.0000  0.000000  10.110340  -5.719292 -10.110340   5.719292  \n",
+      "\n",
+      "[73 rows x 15 columns]\n"
      ]
     }
    ],
@@ -412,7 +315,7 @@
     "    for i in range(iter):\n",
     "        D_P, D_Q, J1, J4 = Jacobian(b_data, Y_bus())\n",
     "        del_delta = np.linalg.solve(J1, D_P)\n",
-    "        print('Delta',max(np.abs(del_delta)))\n",
+    "        #print('Delta',max(np.abs(del_delta)))\n",
     "        if max(np.abs(del_delta)) <= tol:\n",
     "            return b_data_['Delta'] \n",
     "        elif i == iter-1:\n",
@@ -425,7 +328,7 @@
     "    for i in range(iter):\n",
     "        D_P, D_Q, J1, J4 = Jacobian(b_data, Y_bus())\n",
     "        del_V = np.linalg.solve(J4, D_Q)\n",
-    "        print('V:',max(np.abs(del_V)))\n",
+    "        #print('V:',max(np.abs(del_V)))\n",
     "        if max(np.abs(del_V)) <= tol:\n",
     "            return b_data_['Vmag']\n",
     "        elif i == iter-1:\n",
@@ -445,12 +348,12 @@
     "        v = Q_.result()\n",
     "\n",
     "    # Print the results\n",
-    "    print(d)\n",
-    "    print(v)\n",
-    "    b_data['Delta'] = d\n",
+    "    #print(d)\n",
+    "    #print(v)\n",
+    "    b_data['Delta'] = np.radians(d)\n",
     "    b_data['Vmag'] = v\n",
     "\n",
-    "    b_data\n",
+    "    print(b_data)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
@@ -458,50 +361,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(30):\n",
-    "    print(i)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
